--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
         <kumuluzee-config-mp.version>1.3.0</kumuluzee-config-mp.version>
         <kumuluzee-metrics.version>2.0.1</kumuluzee-metrics.version>
         <kumuluzee-logs.version>1.3.1</kumuluzee-logs.version>
-        <mysql-connector-java.version>8.0.18</mysql-connector-java.version>
-        <google-cloud-storage.version>1.102.0</google-cloud-storage.version>
+        <kumuluzee-streaming-kafka.version>1.2.0</kumuluzee-streaming-kafka.version>
         <unirest-java.version>1.4.9</unirest-java.version>
     </properties>
 
@@ -79,14 +78,14 @@
             <version>${kumuluzee-logs.version}</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-connector-java.version}</version>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-microProfile-1.0</artifactId>
+            <version>${kumuluzee.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-storage</artifactId>
-            <version>${google-cloud-storage.version}</version>
+            <groupId>com.kumuluz.ee.streaming</groupId>
+            <artifactId>kumuluzee-streaming-kafka</artifactId>
+            <version>${kumuluzee-streaming-kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>com.mashape.unirest</groupId>
