Fixed Kafka group id.

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -49,7 +49,7 @@ kumuluzee:
         sasl-jaas-config: 'org.apache.kafka.common.security.scram.ScramLoginModule required username="ptjc95jg" password="<hidden>";'
       consumer:
         bootstrap-servers: omnibus-01.srvs.cloudkafka.com:9094
-        group-id: group1
+        group-id: ptjc95jg-consumer
         enable-auto-commit: true
         auto-commit-interval-ms: 1000
         auto-offset-reset: earliest
